# aiopybit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: error_handling.py  generate_card.py  rest_api.py  stream_private.py  stream_tickers.py
src/aiopybit/: __init__.py  client.py  exceptions.py  http_client.py  protocols.py  websocket_client.py  websocket_manager.py
src/aiopybit/cards/: __init__.py  generator.py
src/aiopybit/http_methods/: __init__.py  account_methods.py  market_methods.py  order_methods.py  position_methods.py
src/aiopybit/websocket_methods/: __init__.py  market_streams.py  private_streams.py
tests/: conftest.py  test_cards.py  test_http_client.py  test_public_api.py  test_rest_methods.py  test_websocket_client.py  test_websocket_streams.py
