[project]
name = "aiopybit"
version = "0.3.0"
description = "Asynchronous Python client for the ByBit API"
readme = "README.md"
keywords = [
    "bybit",
    "websocket",
    "crypto",
    "cryptocurrency",
    "trading",
    "exchange",
    "async",
    "aiohttp",
    "python",
    "api",
    "websockets",
    "market-data",
    "orderbook",
    "ticker",
    "trades",
    "bot"
]
license = "MIT"
authors = [
    {name = "Tsunami43",email = "n3m0_22@mail.ru"}
]
requires-python = ">=3.10, <4.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.12.15",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
cards = [
    "Pillow>=10.0.0",
]
rsa = [
    "cryptography>=42.0.0",
]

[project.urls]
Repository = "https://github.com/Tsunami43/aiopybit.git"
Homepage = "https://github.com/Tsunami43/aiopybit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiopybit"]
artifacts = [
    "src/aiopybit/cards/assets/**/*.png",
    "src/aiopybit/cards/assets/**/*.ttf",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88  # same as black; you can increase to 88 if you prefer less strict wrapping


[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C"]  # enable common linter rules, including flake8, isort, bugbear, etc.

ignore = [
    "D100",  # missing docstring in public module
    "D104",  # missing docstring in __init__.py
    "E501",  # line too long (ignored if you don't want to enforce line length strictly)
    "B008",
    "E101"
]

fixable = ["ALL"]       # allow automatic fixing of all rules
unfixable = ["B"]        # do not auto-fix potential bugs (bugbear)

exclude = ["build", "dist", ".venv", "migrations", "tests/fixtures"]  # exclude these directories from linting

[tool.ruff.lint.pydocstyle]
convention = "google"  # docstring style to follow (other options: "numpy", "pep257")


[tool.ruff.format]
quote-style = "single"         # use single quotes for strings
indent-style = "tab"           # use tabs instead of spaces for indentation
docstring-code-format = true   # format code blocks inside docstrings
